Fix footer width overflow page on phone screen.

--- a/client/src/components/Footer/Footer.css
+++ b/client/src/components/Footer/Footer.css
@@ -5,41 +5,41 @@
     padding: 4rem 2rem 0;
 }
 
-    .footer section {
-        margin: 0 clamp(.5rem, 1vw, 3rem);
-        width: fit-content;
-    }
+.footer section {
+    margin: 0 clamp(.5rem, 1vw, 3rem);
+    width: fit-content;
+}
 
-    .footer__get-in-touch {
-        min-width: 20%;
-    }
+.footer__get-in-touch {
+    min-width: 20%;
+}
 
-    .footer__get-in-touch h3 {
-        align-self: flex-start
-    }
+.footer__get-in-touch h3 {
+    align-self: flex-start
+}
 
-    .footer__bottom {
-        left: 0;
-    }
+.footer__bottom {
+    left: 0;
+}
 
-    .footer textarea, footer input {
-        width: 300px;
-        padding: .5rem;
-        margin-bottom: 10px;
-    }
+.footer textarea, footer input {
+    width: 300px;
+    padding: .5rem;
+    margin-bottom: 10px;
+}
 
-    .footer textarea {
-        resize: none;
-        min-height: 100px;
-    }
+.footer textarea {
+    resize: none;
+    min-height: 100px;
+}
 
-    textarea:focus, input:focus {
-        outline: 0;
-    }
+textarea:focus, input:focus {
+    outline: 0;
+}
 
-    .footer__connect-with-me>div {
-        max-width: 150px;
-    }
+.footer__connect-with-me>div {
+    max-width: 150px;
+}
 
 @media screen and (max-width: 1100px) {
     .footer>div {
@@ -48,5 +48,9 @@
 
     .footer section {
         margin: clamp(.9rem, 1vw, 3rem) 0;
+    }
+
+    .footer__main {
+        width: 50% important;
     }
 }
